--- a/saptarang.org/envato/traveler/01/index.html
+++ b/saptarang.org/envato/traveler/01/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
-    <title>:: Welcome to Travelers Website ::</title>
+    <title>Lagom Tour</title>
     <meta
       name="description"
       content="Welcome to Travelers Landing Page Template"
@@ -35,24 +35,25 @@
     <link rel="stylesheet" href="css/owl.carousel.css" />
     <link rel="stylesheet" href="css/prettyPhoto.css" />
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/color-green.css" />
+    <!-- <link rel="stylesheet" href="css/color-green.css" /> -->
+    <link rel="stylesheet" href="css/color-custom.css" />
 
     <script src="js/modernizr.custom.js"></script>
     <!--[if lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
     <!-- Favicon and Apple Icons -->
-    <link rel="shortcut icon" href="images/icons/favicon.ico" />
-    <link rel="apple-touch-icon" href="images/icons/apple-icon-144x144.png" />
+    <link rel="shortcut icon" href="images/icons/icon.png" />
+    <link rel="apple-touch-icon" href="images/icons/icon.png" />
     <link
       rel="apple-touch-icon"
       sizes="72x72"
-      href="images/icons/apple-icon-72x72.png"
+      href="images/icons/icon.png"
     />
     <link
       rel="apple-touch-icon"
       sizes="114x114"
-      href="images/icons/apple-icon-114x114.png"
+      href="images/icons/icon.png"
     />
   </head>
 
@@ -167,9 +168,9 @@
               <a title="company Logo" href="index.html"
                 ><img
                   class="img-responsive"
-                  src="images/company-green.png"
-                  width="185"
-                  height="65"
+                  src="images/logo4.png"
+                  width="150"
+                  height="5"
                   alt="Company Logo"
               /></a>
             </div>
@@ -1280,7 +1281,7 @@
     <!-- ::: END ::: -->
 
     <!--  ::: ABOUT COMPANY ::: -->
-    <section id="about" class="page-block">
+     <section id="about" class="page-block">
       <div class="container">
         <div class="row">
           <div
@@ -1290,12 +1291,12 @@
           >
             <img
               class="img-responsive"
-              src="images/company-green.png"
+              src="images/logo3.png"
               width="350"
               height="142"
               alt="Company Logo"
             />
-            <!--<h1>GroupTour<small>About company</small></h1>-->
+
             <ul class="list-inline social">
               <li>
                 <a href="#" title="Folow me on Facebook" target="_blank"
@@ -1348,22 +1349,25 @@
             data-wow-delay="0.50s"
           >
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit
-              Pellentesque elit tortor, adipiscing vel velit inermentum nulla.
-              Donec in urna semulla facilisi. Lorem ipsum dolor sit amet,
-              consectetur adipiscing elit. Mauris tincidunt tellus vel libero
-              pellentes Proin elit turpis, blandit in libero in
+              Chào mừng bạn đến với dự án EXE201 - Lagom Tour! Chúng tôi là nhóm
+              sinh viên đến từ trường Đại học FPT, và đây là sản phẩm được phát
+              triển trong khuôn khổ môn học Experiential Entrepreneurship.
             </p>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit
-              Pellentesque elite Lorem ipsum dolor sit amet, consectetur
-              adipiscing elit. Mauris tincidunt tellus vel libero pellentes
-              Proin elit turpis, blandit in libero in
+              Lagom Tour được tạo ra với sứ mệnh mang đến những trải nghiệm du
+              lịch độc đáo và ý nghĩa. Chúng tôi tin rằng mỗi chuyến đi không
+              chỉ là những điểm đến, mà còn là những khoảnh khắc đáng nhớ và
+              những câu chuyện thú vị được chia sẻ.
+            </p>
+            <p>
+              Với slogan "Travel Light, Live Lagom", chúng tôi mong muốn mang
+              đến cho khách hàng những trải nghiệm du lịch cân bằng - không quá
+              nhiều, không quá ít, mà đủ để tạo nên những kỷ niệm tuyệt vời.
             </p>
           </div>
           <div class="clear"></div>
 
-          <div class="additional-info">
+          <div>
             <div
               class="container wow fadeInUp"
               data-wow-duration="0.50s"
@@ -1371,23 +1375,18 @@
             >
               <div class="col-md-4 col-sm-12 col-xs-12">
                 <span
-                  ><i class="fa fa-map-marker"></i> 123 Main Street<br />
-                  Your City, State Country.
-                </span>
+                  ><i class="fa fa-map-marker"></i> Khu GD&ĐT, khu CNC Hoà Lạc,
+                  KM29, Đại lộ Thăng Long, huyện Thạch Thất, TP Hà Nội, Hanoi,
+                  Vietnam</span
+                >
               </div>
               <div class="col-md-4 col-sm-12 col-xs-12">
                 <span class="phone"
-                  ><i class="fa fa-phone"></i> (123) 456-7890 <br />(123)
-                  456-7890</span
+                  ><i class="fa fa-phone"></i> 0984421580</span
                 >
               </div>
               <div class="col-md-4 col-sm-12 col-xs-12">
-                <span
-                  ><i class="fa fa-envelope"></i>
-                  <a href="mailto:contact@compnaynme.com" title="Contact"
-                    >contact@compnaynme.com</a
-                  ></span
-                >
+                <span><i class="fa fa-envelope"></i> lagomtour@gmail.com</span>
               </div>
               <div class="clear"></div>
             </div>
@@ -1564,12 +1563,12 @@
         <div class="container">
           <div class="col-md-6 col-sm-12">
             <p>
-              <strong>Group Tour</strong> &copy; 2016. All Rights Reserved.<br />
+              <strong>Lagom Tour</strong> &copy; 2025. All Rights Reserved.<br />
               Landing Page Template Designed &amp; Developed By:
               <a
                 href="http://themeforest.net/user/saptarang?ref=saptarang"
                 title="Saptarang"
-                ><strong>Saptarang</strong></a
+                ><strong>Lagom Tour</strong></a
               >
             </p>
           </div>
