update style link a

--- a/saptarang.org/envato/traveler/01/index.html
+++ b/saptarang.org/envato/traveler/01/index.html
@@ -1428,6 +1428,7 @@
                             <li>
                                 <a
                                     href="https://www.facebook.com/lagomtourbattrang"
+                                    style="background-color: darkgray"
                                     title="Folow me on Facebook"
                                     target="_blank"
                                     ><i class="fa fa-facebook"></i
@@ -1437,12 +1438,17 @@
                             <li>
                                 <a
                                     href="lagomtour@gmail.com"
+                                    style="background-color: darkgray"
                                     title="Google Plus"
                                     ><i class="fa fa-google-plus"></i
                                 ></a>
                             </li>
                             <li>
-                                <a href="#" title="Tiktok">
+                                <a
+                                    href="#"
+                                    title="Tiktok"
+                                    style="background-color: darkgray"
+                                >
                                     <i class="fa fa-tumblr"></i>
                                 </a>
                             </li>
@@ -1728,9 +1734,7 @@
                             <strong>Lagom Tour</strong> &copy; 2025. All Rights
                             Reserved.<br />
                             Landing Page Template Designed &amp; Developed By:
-                            <a
-                                href="http://themeforest.net/user/saptarang?ref=saptarang"
-                                title="Saptarang"
+                            <a href="#" title="Lagom"
                                 ><strong>Lagom Tour</strong></a
                             >
                         </p>
@@ -1757,7 +1761,7 @@
         <!-- ::: END ::: -->
 
         <!-- ::: Terms & Conditions Content ::: -->
-        <div
+        <!-- <div
             class="modal fade"
             id="myModal"
             tabindex="-1"
@@ -1831,10 +1835,8 @@
                         </button>
                     </div>
                 </div>
-                <!-- /.modal-content -->
             </div>
-            <!-- /.modal-dialog -->
-        </div>
+        </div> -->
         <!-- /.modal -->
         <!-- ::: Terms end ::: -->
 
