fix: fix car responsive, change text to vietnamese

--- a/saptarang.org/envato/traveler/01/index.html
+++ b/saptarang.org/envato/traveler/01/index.html
@@ -209,36 +209,36 @@
                                             <a
                                                 href="#travelInfo"
                                                 title="Travel Info"
-                                                >Travel Info</a
+                                                >Khám phá</a
                                             >
                                         </li>
                                         <li>
                                             <a
                                                 href="#itinarary"
                                                 title="Itinarary"
-                                                >Itinarary</a
-                                            >
+                                                >Lịch trình
+                                            </a>
                                         </li>
                                         <li>
                                             <a href="#gallery" title="Gallery"
-                                                >Gallery</a
+                                                >Khoảng khắc</a
                                             >
                                         </li>
                                         <li>
                                             <a
                                                 href="#quotes"
                                                 title="Testimonials"
-                                                >Testimonials</a
+                                                >Cảm nhận khách hàng</a
                                             >
                                         </li>
                                         <li>
                                             <a href="#about" title="About"
-                                                >About</a
+                                                >Về Lagom Tour</a
                                             >
                                         </li>
                                         <li>
                                             <a href="#contact" title="Contact"
-                                                >Contact</a
+                                                >Đăng kí</a
                                             >
                                         </li>
                                     </ul>
@@ -452,8 +452,8 @@
                                             </ul>
                                         </div>
                                         <a
-                                            href="tel:0988766000"
-                                            class="btn btn-primary"
+                                            href="#contact"
+                                            class="btn btn-primary scroll-to-form"
                                             style="
                                                 background: #8d5524;
                                                 border: none;
@@ -591,8 +591,8 @@
                                             <li>Bảo hiểm, quà lưu niệm</li>
                                         </ul>
                                         <a
-                                            href="tel:0988766000"
-                                            class="btn btn-primary"
+                                            href="#contact"
+                                            class="btn btn-primary scroll-to-form"
                                             style="
                                                 background: #8d5524;
                                                 border: none;
@@ -762,8 +762,9 @@
                         data-wow-delay="0.50s"
                     >
                         <h1 class="text-center">
-                            <span>TOUR</span> ITINERARY<small
-                                >Highlights Of Your Journey</small
+                            <span></span> Lịch Trình Trải Nghiệm<small
+                                >Tour trải nghiệm 1 ngày tại Làng Gốm Bát
+                                Tràng</small
                             >
                         </h1>
                     </div>
@@ -1016,9 +1017,9 @@
                     data-wow-duration="0.50s"
                     data-wow-delay="0.50s"
                 >
-                    <span>Photo</span> Gallery<small
-                        >Clix from Previous Tours</small
-                    >
+                    <span>Khoảng khắc</span> đáng nhớ<small>
+                        Nặn gốm thành yêu thương
+                    </small>
                 </h1>
 
                 <div id="galleryCarousel">
@@ -1227,7 +1228,8 @@
                         data-wow-duration="0.50s"
                         data-wow-delay="0.50s"
                     >
-                        Lined <span>Up</span><small>Our Upcoming Tours</small>
+                        Tour <span>Sắp Diễn Ra</span
+                        ><small>Đăng kí ngay hôm nay</small>
                     </h1>
                     <div class="col-md-12">
                         <!-- ::: Upcoming Start ::: -->
@@ -1238,101 +1240,55 @@
                                 data-wow-delay="0.50s"
                             >
                                 <div class="name">
-                                    <h1>Wild Life <span>Safari</span></h1>
-                                    <a class="link" href="#" title=""
-                                        ><i class="fa fa-link"></i
-                                    ></a>
-                                    <h4>
-                                        25 JAN<span>7 Days &amp; 6 Nights</span>
-                                    </h4>
+                                    <h1>Lagom Tour: Bát Tràng 1 ngày</h1>
+                                    <h4>22/06/2025 <span>Chủ nhật</span></h4>
                                 </div>
-                                <img src="images/gallery/small/01.jpg" alt="" />
+                                <img
+                                    src="images/gallery/small/01.jpg"
+                                    alt="Lagom Tour Bát Tràng"
+                                />
                             </div>
-
                             <div
                                 class="item wow zoomIn"
                                 data-wow-duration="0.50s"
                                 data-wow-delay="0.65s"
                             >
                                 <div class="name">
-                                    <h1>Honeymoon <span>Tour</span></h1>
-                                    <a class="link" href="#" title=""
-                                        ><i class="fa fa-link"></i
-                                    ></a>
-                                    <h4>
-                                        25 JAN<span>7 Days &amp; 6 Nights</span>
-                                    </h4>
+                                    <h1>Tour Gốm & Âm Nhạc</h1>
+                                    <h4>13/07/2025 <span>Chủ nhật</span></h4>
                                 </div>
-                                <img src="images/gallery/small/02.jpg" alt="" />
+                                <img
+                                    src="images/gallery/small/02.jpg"
+                                    alt="Tour Gốm & Âm Nhạc"
+                                />
                             </div>
-
                             <div
                                 class="item wow zoomIn"
                                 data-wow-duration="0.50s"
-                                data-wow-delay="0.85s"
+                                data-wow-delay="0.80s"
                             >
                                 <div class="name">
-                                    <h1>Beautiful <span>Beaches</span></h1>
-                                    <a class="link" href="#" title=""
-                                        ><i class="fa fa-link"></i
-                                    ></a>
-                                    <h4>
-                                        25 JAN<span>7 Days &amp; 6 Nights</span>
-                                    </h4>
+                                    <h1>Tour Bát Tràng về đêm</h1>
+                                    <h4>27/07/2025 <span>Thứ bảy</span></h4>
                                 </div>
-                                <img src="images/gallery/small/03.jpg" alt="" />
+                                <img
+                                    src="images/gallery/small/03.jpg"
+                                    alt="Tour Bát Tràng về đêm"
+                                />
                             </div>
-
-                            <div class="item">
+                            <div
+                                class="item wow zoomIn"
+                                data-wow-duration="0.50s"
+                                data-wow-delay="0.95s"
+                            >
                                 <div class="name">
-                                    <h1>Adventure <span>Tour</span></h1>
-                                    <a class="link" href="#" title=""
-                                        ><i class="fa fa-link"></i
-                                    ></a>
-                                    <h4>
-                                        25 JAN<span>7 Days &amp; 6 Nights</span>
-                                    </h4>
+                                    <h1>Tour Trải Nghiệm Nghệ Nhân</h1>
+                                    <h4>10/08/2025 <span>Chủ nhật</span></h4>
                                 </div>
-                                <img src="images/gallery/small/04.jpg" alt="" />
-                            </div>
-
-                            <div class="item">
-                                <div class="name">
-                                    <h1>Andaman <span>Island</span></h1>
-                                    <a class="link" href="#" title=""
-                                        ><i class="fa fa-link"></i
-                                    ></a>
-                                    <h4>
-                                        25 JAN<span>7 Days &amp; 6 Nights</span>
-                                    </h4>
-                                </div>
-                                <img src="images/gallery/small/05.jpg" alt="" />
-                            </div>
-
-                            <div class="item">
-                                <div class="name">
-                                    <h1>Friendship <span>Tour</span></h1>
-                                    <a class="link" href="#" title=""
-                                        ><i class="fa fa-link"></i
-                                    ></a>
-                                    <h4>
-                                        25 JAN<span>7 Days &amp; 6 Nights</span>
-                                    </h4>
-                                </div>
-                                <img src="images/gallery/small/06.jpg" alt="" />
-                            </div>
-
-                            <div class="item">
-                                <div class="name">
-                                    <h1>Honeymoon <span>Tour</span></h1>
-                                    <a class="link" href="#" title=""
-                                        ><i class="fa fa-link"></i
-                                    ></a>
-                                    <h4>
-                                        25 JAN<span>7 Days &amp; 6 Nights</span>
-                                    </h4>
-                                </div>
-                                <img src="images/gallery/small/07.jpg" alt="" />
+                                <img
+                                    src="images/gallery/small/04.jpg"
+                                    alt="Tour Nghệ Nhân"
+                                />
                             </div>
                         </div>
                         <!-- ::: Upcoming end ::: -->
@@ -2203,6 +2159,22 @@
                 // Gọi khi scroll và khi load
                 $(window).on("scroll resize", updateActiveDay);
                 setTimeout(updateActiveDay, 500);
+            });
+        </script>
+
+        <script>
+            // Scroll to form when click ĐẶT NGAY
+            $(document).on("click", ".scroll-to-form", function (e) {
+                e.preventDefault();
+                var target = $("#contact");
+                if (target.length) {
+                    $("html, body").animate(
+                        {
+                            scrollTop: target.offset().top - 30,
+                        },
+                        800
+                    );
+                }
             });
         </script>
     </body>
