fix: fix content, fix height content

--- a/saptarang.org/envato/traveler/01/index.html
+++ b/saptarang.org/envato/traveler/01/index.html
@@ -297,25 +297,22 @@
                         >
                             <div class="col-md-4 col-sm-12 col-xs-12">
                                 <span
-                                    ><i class="fa fa-calendar"></i> Adventure
-                                    Begins<br />
-                                    <strong>22 June 2025</strong>
+                                    ><i class="fa fa-calendar"></i> Bắt đầu<br />
+                                    <strong>22 tháng 6 năm 2025</strong>
                                 </span>
                             </div>
                             <div class="col-md-3 col-sm-12 col-xs-12">
                                 <span
-                                    ><i class="fa fa-bullhorn"></i>
-                                    Duration<br />
-                                    <strong>1 Days</strong>
+                                    ><i class="fa fa-bullhorn"></i> Thời gian<br />
+                                    <strong>1 ngày</strong>
                                 </span>
                             </div>
                             <div class="col-md-5 col-sm-12 col-xs-12">
                                 <span
-                                    ><i class="fa fa-cloud"></i> Wheather<br />
+                                    ><i class="fa fa-cloud"></i> Thời tiết<br />
                                     <strong
-                                        >Summer - 30<sup>&#8451;</sup> to 40<sup
-                                            >&#8451;</sup
-                                        ></strong
+                                        >Mùa hè từ 30<sup>&#8451;</sup> đến
+                                        40<sup>&#8451;</sup></strong
                                     >
                                 </span>
                             </div>
@@ -852,7 +849,7 @@
                         </div>
                         <ul class="special">
                             <li>Mua vé và làm thủ tục tham quan</li>
-                            <li>Tự do khám phá tầng 1, tầng 2 của bảo tàng</li>
+                            <li>Tự do khám phá 5 tầng của bảo tàng</li>
                             <li>
                                 Tham gia mini game "Truy tìm cổ vật" có thưởng
                             </li>
@@ -975,15 +972,21 @@
                             "
                         />
                     </div>
-                    <div class="right placeInfo">
+                    <div class="right placeInfo" style="height: 47em">
                         <div class="dayNum abs">Chợ Gốm</div>
                         <h2>Kết thúc nhẹ nhàng với chút duyên mang về</h2>
                         <span>15h30 - 16h30 | Mua sắm & chụp ảnh kỷ niệm</span>
                         <p>
-                            Cuối hành trình là phiên chợ gốm nhỏ xinh, nơi những
-                            món đồ thủ công được bày bán rực rỡ sắc màu. Một
-                            chút kỷ niệm mang về – để nhớ mãi một ngày ở Bát
-                            Tràng.
+                            Chợ Gốm Bát Tràng là điểm dừng chân cuối cùng, nơi
+                            từng món đồ gốm nhỏ xinh được bày biện rực rỡ, đong
+                            đầy nét tinh tế và sự sáng tạo của người thợ thủ
+                            công. Đây là không gian để bạn thỏa sức lựa chọn
+                            những món quà lưu niệm độc đáo, vừa là kỷ niệm của
+                            một ngày trải nghiệm vừa là cầu nối gắn kết văn hóa
+                            truyền thống với cuộc sống hiện đại. Bước chân nhẹ
+                            nhàng trên những con đường lát đá quanh chợ, bạn sẽ
+                            cảm nhận được sự bình yên và vẻ đẹp mộc mạc, giản dị
+                            của một làng nghề cổ.
                         </p>
                         <div
                             style="
