--- a/saptarang.org/envato/traveler/01/index.html
+++ b/saptarang.org/envato/traveler/01/index.html
@@ -45,16 +45,8 @@
     <!-- Favicon and Apple Icons -->
     <link rel="shortcut icon" href="images/icons/icon.png" />
     <link rel="apple-touch-icon" href="images/icons/icon.png" />
-    <link
-      rel="apple-touch-icon"
-      sizes="72x72"
-      href="images/icons/icon.png"
-    />
-    <link
-      rel="apple-touch-icon"
-      sizes="114x114"
-      href="images/icons/icon.png"
-    />
+    <link rel="apple-touch-icon" sizes="72x72" href="images/icons/icon.png" />
+    <link rel="apple-touch-icon" sizes="114x114" href="images/icons/icon.png" />
   </head>
 
   <body id="top">
@@ -1188,12 +1180,12 @@
                   <div class="author">
                     <img
                       class="img-circle img-responsive"
-                      src="images/quote/01.jpg"
+                      src="images/quote/locnx.jpg"
                       width="65"
                       height="65"
                       alt=""
                     />
-                    <h5>Nguyễn Thị Hương <small>Nhân viên văn phòng</small></h5>
+                    <h5>Nghiêm Xuân Lộc <small>Giám Đốc Công Ty</small></h5>
                   </div>
                 </div>
                 <!-- end item -->
@@ -1209,14 +1201,12 @@
                   <div class="author">
                     <img
                       class="img-circle img-responsive"
-                      src="images/quote/02.jpg"
+                      src="images/quote/cuongbeo.jpg"
                       width="65"
                       height="65"
                       alt=""
                     />
-                    <h5>
-                      Trần Văn Nam <small>Giám đốc công ty công nghệ</small>
-                    </h5>
+                    <h5>Hứa Văn Cường <small>Nhân Viên Văn Phòng</small></h5>
                   </div>
                 </div>
                 <!-- end item -->
@@ -1231,12 +1221,12 @@
                   <div class="author">
                     <img
                       class="img-circle img-responsive"
-                      src="images/quote/03.jpg"
+                      src="images/quote/hoand.jpg"
                       width="65"
                       height="65"
                       alt=""
                     />
-                    <h5>Lê Minh Tuấn <small>Doanh nhân</small></h5>
+                    <h5>Nguyễn Đăng Hòa <small>Sinh Viên</small></h5>
                   </div>
                 </div>
                 <!-- end item -->
@@ -1281,7 +1271,7 @@
     <!-- ::: END ::: -->
 
     <!--  ::: ABOUT COMPANY ::: -->
-     <section id="about" class="page-block">
+    <section id="about" class="page-block">
       <div class="container">
         <div class="row">
           <div
