--- a/saptarang.org/envato/traveler/01/index.html
+++ b/saptarang.org/envato/traveler/01/index.html
@@ -782,7 +782,7 @@
                 <div class="day">
                     <div class="left placeImg">
                         <img
-                            src="images/battrang-experience.jpg"
+                            src="images/fptu.jpg"
                             alt="FPT University"
                             style="
                                 width: 100%;
@@ -858,7 +858,7 @@
                     </div>
                     <div class="right placeImg">
                         <img
-                            src="images/battrang-experience.jpg"
+                            src="images/battrang.jpg"
                             alt="Bảo tàng Gốm Bát Tràng"
                             style="
                                 width: 100%;
@@ -875,7 +875,7 @@
                 <div class="day">
                     <div class="left placeImg">
                         <img
-                            src="images/battrang-experience.jpg"
+                            src="images/banhcuon.jpg"
                             alt="Bánh cuốn Cô Nghi"
                             style="
                                 width: 100%;
@@ -946,7 +946,7 @@
                     </div>
                     <div class="right placeImg">
                         <img
-                            src="images/battrang-experience.jpg"
+                            src="images/lobau.jpg"
                             alt="Lò Bầu Cổ"
                             style="
                                 width: 100%;
@@ -963,7 +963,7 @@
                 <div class="day">
                     <div class="left placeImg">
                         <img
-                            src="images/battrang-experience.jpg"
+                            src="images/chogom.jpg"
                             alt="Chợ Gốm"
                             style="
                                 width: 100%;
@@ -972,7 +972,7 @@
                             "
                         />
                     </div>
-                    <div class="right placeInfo" style="height: 47em">
+                    <div class="right placeInfo">
                         <div class="dayNum abs">Chợ Gốm</div>
                         <h2>Kết thúc nhẹ nhàng với chút duyên mang về</h2>
                         <span>15h30 - 16h30 | Mua sắm & chụp ảnh kỷ niệm</span>
